Correções para a build de produção

--- a/frontend/src/app/pacientes/triagem/triagem.component.html
+++ b/frontend/src/app/pacientes/triagem/triagem.component.html
@@ -38,7 +38,7 @@
                     </div>
                 </div>
                 <div class="ui-g-12 ui-md-3"></div>
-                <basis-datatable type="memory" [value]="pacientes">
+                <basis-datatable type="memory" [value]="null">
                     <p-column header="Nome do Paciente" field="nomeDoPaciente"></p-column>
                     <p-column header="Nome Social" field="nomeSocial"></p-column>
                     <p-column header="Nome da Mãe" field="nomeDaMae"></p-column>
