--- a/frontend/src/app/pacientes/formulario-paciente/endereco/endereco.component.html
+++ b/frontend/src/app/pacientes/formulario-paciente/endereco/endereco.component.html
@@ -1,4 +1,4 @@
-<div [formGroup]="enderecos" (ngSubmit)="adicionar()">
+<div [formGroup]="enderecos">
     <div class="ui-g ui-fluid">
         <div class="ui-g-12">
             <div class="ui-g-5 ui-sm-12">
