--- a/frontend/src/app/pacientes/triagem/formulario-triagem/formulario-triagem.component.html
+++ b/frontend/src/app/pacientes/triagem/formulario-triagem/formulario-triagem.component.html
@@ -137,5 +137,28 @@
                 </span>
             </div>
         </div>
+
+        <div class="ui-g-12">
+            <div class="ui-g-10 ui-sm-10">
+                <div class="ui-float-label">
+                    <div class="ui-g-3">
+                        <button
+                            pButton
+                            type="button"
+                            label="Cancelar"
+                            bTooltip="Cancelar registro de triagem."
+                        ></button>
+                    </div>
+                </div>
+                <div class="ui-g-3">
+                    <button
+                        pButton
+                        type="button"
+                        label="Salvar"
+                        bTooltip="Salvar registro de triagem."
+                    ></button>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
