--- a/frontend/src/app/pacientes/triagem/formulario-triagem/classificacao-de-risco/classificacao-de-risco.component.scss
+++ b/frontend/src/app/pacientes/triagem/formulario-triagem/classificacao-de-risco/classificacao-de-risco.component.scss
@@ -1,38 +1,17 @@
-.ui-red-button {
-    background-color: red;
-    border-radius: 12px;
-    width: 60px;
-}
-.ui-orange-button {
-    background-color: orange;
-    border-radius: 12px;
-    width: 60px;
-}
-.ui-yellow-button {
-    background-color: yellow;
-    border-radius: 12px;
-    width: 60px;
-}
-.ui-green-button {
-    background-color: green;
-    border-radius: 12px;
-    width: 60px;
-}
-.ui-blue-button {
-    background-color: blue;
-    border-radius: 12px;
-    width: 60px;
-}
-
-button {
-    margin-right: 10px;
-}
 p-radioButton {
-    margin-right: 42px;
+    margin-left: 15px;
+    margin-right: 15px;
+    text-align: right;
 }
 .botoes {
     text-align: right;
 }
-.radio {
+h4 {
+    margin-right: 150px;
     text-align: right;
+}
+img {
+    height: 50px;
+    width: 50px;
+    box-align: right;
 }
